# expenses

./: Cargo.toml  README.md
src/: main.rs
ui/: appwindow.slint
