[package]
name = "expenses"
version = "0.1.0"
description = "A desktop app that divides income"
authors = ["Pedro Luz <pedromsluz@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]
name = "Income Divider"
identifier = "io.github.narven.expenses"
